# netgate

./: Cargo.toml  Makefile  README.md  backlog
demo/: README.md  frontend_emulator.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src/api/: health.rs  metrics.rs  mod.rs  orders.rs  tenants.rs
src/business/: enrichment.rs  extensible_order_service.rs  mod.rs  order_service.rs  plugin.rs  processors.rs  transformation.rs  validation.rs  workflow.rs
src/cache/: metrics.rs  mod.rs  store.rs  strategy.rs
src/domain/: mod.rs  order.rs  tenant.rs
src/netbox/: cached_client.rs  client.rs  error.rs  mod.rs  models.rs  resilient_client.rs  tenant_client.rs
src/observability/: middleware.rs  mod.rs  tracing.rs
src/resilience/: circuit_breaker.rs  degradation.rs  metrics.rs  mod.rs  retry.rs
src/security/: auth.rs  mod.rs  tenant.rs
src/virtual/: mapping.rs  mod.rs  models.rs  service.rs
tests/: integration_test.rs
