[package]
name = "netgate"
version = "0.1.0"
edition = "2021"

[lib]
name = "netgate"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
poem = "1.3"
poem-openapi = { version = "2.0", features = ["swagger-ui"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
